Knife tool shows questionable behavior when cutting through split edges #44492

Closed
opened 2015-04-23 07:55:04 +02:00 by Gaia Clary · 15 comments
Member

System Information
Windows 7
nvidia Titan

Blender Version
Broken: current development version
Works in 2.73 (just confirmed)

Short description of error

Make a knife cut through a split edge, then parts of the expected cut will be silently ignored. IMHO The tool should cut both split edges and not only one of them.

Exact steps for others to reproduce the error

Here is the demo blend file: knife_tool.blend and here is a very short demo video
https://www.youtube.com/watch?v=Lxfq7JBiG5k

**System Information** Windows 7 nvidia Titan **Blender Version** Broken: current development version Works in 2.73 (just confirmed) **Short description of error** Make a knife cut through a split edge, then parts of the expected cut will be silently ignored. IMHO The tool should cut both split edges and not only one of them. **Exact steps for others to reproduce the error** Here is the demo blend file: [knife_tool.blend](https://archive.blender.org/developer/F166145/knife_tool.blend) and here is a very short demo video https://www.youtube.com/watch?v=Lxfq7JBiG5k
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @GaiaClary

Added subscriber: @GaiaClary

Added subscriber: @sindra1961

Added subscriber: @sindra1961

Because I can cut it definitely in 2.73a, I think that it is a bug.

Because I can cut it definitely in 2.73a, I think that it is a bug.

Added subscribers: @howardt, @ideasman42, @Psy-Fi

Added subscribers: @howardt, @ideasman42, @Psy-Fi

Maybe @ideasman42 or @howardt can check things here?

Maybe @ideasman42 or @howardt can check things here?
Howard Trickey self-assigned this 2015-04-23 15:23:54 +02:00
Member

Yes, it is a bug. I will look at it now.

Yes, it is a bug. I will look at it now.
Member

I have diagnosed the problem, but need to think about a good fix.

Note to myself and Campbell:
The problem is that knife_find_line_hits, when looking for edge hits, uses

  point_is_visible(kcd, p_cage, sint, &mats, bm_elem_from_knife_edge(kfe))

which asks if the candidate hit KnifeEdge kfe is visible without hitting any face except possibly the one containing kfe itself.
Unfortunately here, when considering one of the split edges (e13), the visibility test finds a hit on the face containing the
other split edge (e10).

Campbell, maybe you have an idea for a good fix?
For convenience, here is a modified test file knife_tool_2.blend that you only need to run "knife project" on to tickle the bug.

I have diagnosed the problem, but need to think about a good fix. Note to myself and Campbell: The problem is that knife_find_line_hits, when looking for edge hits, uses ``` point_is_visible(kcd, p_cage, sint, &mats, bm_elem_from_knife_edge(kfe)) ``` which asks if the candidate hit KnifeEdge kfe is visible without hitting any face except possibly the one containing kfe itself. Unfortunately here, when considering one of the split edges (e13), the visibility test finds a hit on the face containing the other split edge (e10). Campbell, maybe you have an idea for a good fix? For convenience, here is a modified test file [knife_tool_2.blend](https://archive.blender.org/developer/F166327/knife_tool_2.blend) that you only need to run "knife project" on to tickle the bug.

Added subscriber: @candreacchio

Added subscriber: @candreacchio

Pretty sure this isnt a bug... pretty sure you need to either enable 'cut through' on either tool (z for knife cut or enabling it in the toolbox for knife project)

Pretty sure this isnt a bug... pretty sure you need to either enable 'cut through' on either tool (z for knife cut or enabling it in the toolbox for knife project)

It surely works definitely if I enable 'cut through' option.
However, it is different from the reported meaning.
However, it may be useful information.

Cut through: Allow the cut tool to cut through to obscured faces, instead of only the visible ones.

It surely works definitely if I enable 'cut through' option. However, it is different from the reported meaning. However, it may be useful information. Cut through: Allow the cut tool to cut through to obscured faces, instead of only the visible ones.

This issue was referenced by c2f861453e

This issue was referenced by c2f861453e3eb9e3cbb7840066fc074e015dfc87
Member

Knife, in non-cut-through mode, is supposed to cut "visible" things. Whether or not this is a bug depends on whether or not one thinks that two coincident edges (created by a split) obscure each other. This is a bit of an edge case, but reasonable people would probably say "no, they don't obscure each other -- both are 'visible'". On that theory, I call this a bug and have programmed a fix, which I am about to commit.

Knife, in non-cut-through mode, is supposed to cut "visible" things. Whether or not this is a bug depends on whether or not one thinks that two coincident edges (created by a split) obscure each other. This is a bit of an edge case, but reasonable people would probably say "no, they don't obscure each other -- both are 'visible'". On that theory, I call this a bug and have programmed a fix, which I am about to commit.
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit c2f861453e.

Closed by commit c2f861453e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44492
No description provided.