Fix T44492: knife tool should cut across a split edge.

Added filter condition in visibility check that prevented
a "butting-up-against" face from obscuring an edge.